[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Minion.gd" type="Script" id=1]
[ext_resource path="res://Characters/Char.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/HPBar.png" type="Texture" id=3]
[ext_resource path="res://textures/HPBarOutline2.png" type="Texture" id=4]
[ext_resource path="res://textures/blobshadow.png" type="Texture" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.603812

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.5, 0.3, 0.571857 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 2.5, 2.5 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = SubResource( 4 )

[sub_resource type="CylinderMesh" id=6]
top_radius = 2.0
bottom_radius = 2.0
height = 0.05

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
albedo_color = Color( 0, 0.827451, 0.266667, 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_color = Color( 1, 1, 1, 0.588235 )
albedo_texture = ExtResource( 5 )

[sub_resource type="QuadMesh" id=9]
size = Vector2( 1.5, 1.5 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.258721, 0.234301, 0.273095 )

[node name="MinionA" type="KinematicBody" groups=["MinionA", "TeamA"]]
collision_layer = 32
collision_mask = 32
script = ExtResource( 1 )

[node name="Char" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.45, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 17
collision_mask = 17

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.443602, 0.682017 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 100, 100 )
transparent_bg = true
render_target_v_flip = true

[node name="HPBar" type="TextureProgress" parent="Viewport"]
margin_left = 30.0
margin_right = 90.0
margin_bottom = 10.0
rect_min_size = Vector2( 60, 10 )
value = 100.0
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.211765, 0.211765, 0.211765, 1 )
tint_progress = Color( 0.0313726, 0.858824, 0.0823529, 1 )
nine_patch_stretch = true

[node name="TextPop" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.115076, 0.804068, 0 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="MapIcon" type="MeshInstance" parent="."]
layers = 2
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="Shadow" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.362026, 0 )
material_override = SubResource( 8 )
cast_shadow = 0
mesh = SubResource( 9 )
material/0 = null

[node name="Hit" type="Area" parent="."]
collision_layer = 18
collision_mask = 18

[node name="CollisionShape" type="CollisionShape" parent="Hit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.74678, 0.871852 )
shape = SubResource( 10 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Hit" to="." method="_on_Hit_body_entered"]

[editable path="Char"]
